# my_database_logger

./: CMakeLists.txt  readme.md
include/: logfile_sink.h  my_database_log_format.h  my_sqlite3_table.h  sqlite3_sink.h
matlab/: load_sqlitedb.m
src/: logfile_sink.cc  main.cpp  my_database_log_format.cc  my_sqlite3_table.cc  sqlite3_sink.cc
